[package]
name = "test_egui"
version = "0.1.0"
edition = "2021"


[dependencies]
egui = "0.23"
eframe = "0.23"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
winapi = { version = "0.3", features = ["winuser", "windef"] }
serde_json = "1.0"