[package]
name = "test_egui"
version = "0.1.0"
edition = "2021"


[dependencies]
    egui = "0.31.0"
    eframe = "0.31.0"
    reqwest = { version = "0.12.12", features = ["json", "blocking"] }
    serde = { version = "1.0.218", features = ["derive"] }
    serde_json = "1.0.139"
    log = "0.4.26"
    env_logger = "0.11.6"